--- a/RAG/Langchain/chain.ipynb
+++ b/RAG/Langchain/chain.ipynb
@@ -9,27 +9,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.schema import HumanMessage,SystemMessage\n",
+    "from langchain_openai import ChatOpenAI,OpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate,HumanMessagePromptTemplate,SystemMessagePromptTemplate\n",
+    "\n",
+    "import os\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ChatOpenAi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "OpenAI.__init__() got an unexpected keyword argument 'model_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OpenAI\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Create a new OpenAI instance\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m llm \u001b[38;5;241m=\u001b[39m \u001b[43mOpenAI\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgpt-3.5-turbo\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(llm(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mintroduce yourself\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[1;31mTypeError\u001b[0m: OpenAI.__init__() got an unexpected keyword argument 'model_name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I am a chatbot here to assist you with any questions or tasks you may have. Feel free to ask me anything!\n"
      ]
     }
    ],
    "source": [
-    "from openai import OpenAI\n",
+    "chat=ChatOpenAI(\n",
+    "    model=\"gpt-3.5-turbo-0125\",\n",
+    "    temperature=0.5,\n",
+    ")\n",
+    "message=[\n",
+    "    SystemMessage(content=\"you are a chatbot.\"),\n",
+    "    HumanMessage(content=\"Hello,introduce youself\"),\n",
+    "]\n",
+    "res=chat(message)\n",
+    "print(res.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### OpenAi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "def quick_sort(arr):\n",
+      "    if len(arr) <= 1:\n",
+      "        return arr\n",
+      "    else:\n",
+      "        pivot = arr[0]\n",
+      "        left = [x for x in arr[1:] if x <= pivot]\n",
+      "        right = [x for x in arr[1:] if x > pivot]\n",
+      "        return quick_sort(left) + [pivot] + quick_sort(right)\n",
+      "\n",
+      "# 测试\n",
+      "print(quick_sort([3, 2, 1, 5, 4]))  # 输出 [1, 2, 3, 4, 5]"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_openai import OpenAI\n",
     "\n",
-    "# Create a new OpenAI instance\n",
-    "llm = OpenAI(model_name=\"gpt-3.5-turbo\") \n",
-    "print(llm(\"introduce yourself\"))"
+    "llm = OpenAI(model=\"gpt-3.5-turbo-instruct\", temperature=0, max_tokens=512)\n",
+    "\n",
+    "res=llm.stream(\"使用python编写快速排序算法。\")\n",
+    "for chunk in res:\n",
+    "    print(chunk, end=\"\", flush=True)"
    ]
   },
   {
