--- a/RAG/Langchain/chain.ipynb
+++ b/RAG/Langchain/chain.ipynb
@@ -18,7 +18,7 @@
     "from langchain.prompts import ChatPromptTemplate,HumanMessagePromptTemplate,SystemMessagePromptTemplate\n",
     "\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n"
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n"
    ]
   },
   {
