--- a/RAG/Langchain/openai_api.ipynb
+++ b/RAG/Langchain/openai_api.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,9 @@
     "from langchain_openai import ChatOpenAI,OpenAI\n",
     "from langchain.prompts import ChatPromptTemplate,HumanMessagePromptTemplate,SystemMessagePromptTemplate\n",
     "\n",
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n"
+    "#把api_key放在环境变量中,可以在系统环境变量中设置，也可以在代码中设置\n",
+    "# import os\n",
+    "# os.environ['OPENAI_API_KEY'] = ''"
    ]
   },
   {
@@ -30,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I am a chatbot here to assist you with any questions or tasks you may have. Feel free to ask me anything!\n"
+      "Hello! I am a chatbot here to help you with any questions or tasks you may have. Feel free to ask me anything!\n"
      ]
     }
    ],
@@ -46,11 +47,11 @@
     "    model=\"gpt-3.5-turbo-0125\",\n",
     "    temperature=0.5,\n",
     ")\n",
-    "message=[\n",
+    "message=[   \n",
     "    SystemMessage(content=\"you are a chatbot.\"),\n",
     "    HumanMessage(content=\"Hello,introduce youself\"),\n",
     "]\n",
-    "res=chat(message)\n",
+    "res=chat.invoke(message)\n",
     "print(res.content)"
    ]
   },
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": []
