--- a/RAG/gradio/gradio_example.ipynb
+++ b/RAG/gradio/gradio_example.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 使用llm来进行回答"
+    "### 使用本地llm来进行回答"
    ]
   },
   {
@@ -62,21 +62,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 使用openai api"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Running on local URL:  http://127.0.0.1:7864\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -84,7 +85,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7878/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -92,9 +93,39 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "import gradio as gr\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "import time\n",
+    "chat=ChatOpenAI(temperature=1)\n",
+    "\n",
+    "def echo(message, history):\n",
+    "    result=chat.invoke(message).content\n",
+    "    for i in range(len(result)):\n",
+    "        time.sleep(0.02)\n",
+    "        yield result[: i+1]\n",
+    "\n",
+    "        #自定义的流式输出\n",
+    "\n",
+    "\n",
+    "\n",
+    "demo = gr.ChatInterface(fn=echo, \n",
+    "                        examples=[\"hello\", \"hola\", \"merhaba\",\"使用python写快速排序算法\"], \n",
+    "                        title=\"Echo Bot\",\n",
+    "                        theme=\"soft\")\n",
+    "demo.launch()"
+   ]
   },
   {
    "cell_type": "code",
