--- a/RAG/Langchain/prompt _&_parser.ipynb
+++ b/RAG/Langchain/prompt _&_parser.ipynb
@@ -11,26 +11,255 @@
     "\n",
     "### template(模板)也就是一个提示，给予模型某些定义，可以这么理解\"\n",
     "\n",
+    "\n",
     "```bash\n",
-    "you are a chat bot.answer this qustion {}”.format(\"你的问题\")\n",
+    "\"you are a chat bot,was named phb, answer my questions :{question}\".format(question=\"你的问题\") #template\n",
     "```\n",
     "\n",
     "### 而parser(解析器)也是一种提示，提示模型怎么回答，可以这么理解\n",
     "\n",
+    "\n",
     "```bash\n",
-    "you are a chat bot.answer this qustion {}”.format(\"你的问题\") #template\n",
+    "\"you are a chat bot,was named phb, answer my questions :{question}\".format(question=\"你的问题\") #template\n",
     "\n",
     "请使用一下格式回答问题 #parser\n",
     "{\n",
-    "    answe:\n",
+    "    question:\n",
+    "    answer:\n",
     "}\n",
-    "```"
+    "```\n",
+    "### 当然，作为parser，后续对回答也有相应的解析"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 不懂看代码"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 最简prompt_template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_openai import OpenAI\n",
+    "llm=OpenAI(model=\"gpt-3.5-turbo-instruct\",temperature=1)\n",
+    "\n",
+    "template=PromptTemplate.from_template(\"you are a chat bot,was named phb, answer my questions :{question}\")\n",
+    "#template=PromptTemplate(template=\"you are a chat bot,named phb,answer my questions :{question}\",input_variables=[\"qustion\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['question'] template='you are a chat bot,was named phb, answer my questions :{question}'\n",
+      "you are a chat bot,was named phb, answer my questions :who are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "template\n",
+    "prompt=template.format(question=\"who are you?\")\n",
+    "print(template)\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nI am a pre-programmed artificial intelligence designed to communicate and assist users with various tasks and information. My name is phb. How can I assist you?'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 最简ChatPromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts import SystemMessagePromptTemplate, HumanMessagePromptTemplate, AIMessagePromptTemplate\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm=ChatOpenAI(model=\"gpt-3.5-turbo-0125\",temperature=1)\n",
+    "\n",
+    "chat_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a helpful AI bot. Your name is PHB.\"),\n",
+    "        (\"human\", \"Hello, how are you doing?\"),\n",
+    "        (\"ai\", \"I'm doing well, thanks!\"),\n",
+    "        (\"human\", \"{user_input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# ChatPromptTemplate(\n",
+    "#     input_variables=['user_input'], \n",
+    "#     messages=[\n",
+    "#         SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='You are a helpful AI bot. Your name is PHB.')),\n",
+    "#         HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='Hello, how are you doing?')), \n",
+    "#         AIMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template=\"I'm doing well, thanks!\")), \n",
+    "#         HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['user_input'], template='{user_input}'))\n",
+    "#     ]\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "\n",
+    "messages = chat_template.format_messages(user_input=\"What is your name?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['user_input'], messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='You are a helpful AI bot. Your name is PHB.')), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='Hello, how are you doing?')), AIMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template=\"I'm doing well, thanks!\")), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['user_input'], template='{user_input}'))])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='You are a helpful AI bot. Your name is PHB.'),\n",
+       " HumanMessage(content='Hello, how are you doing?'),\n",
+       " AIMessage(content=\"I'm doing well, thanks!\"),\n",
+       " HumanMessage(content='What is your name?')]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='My name is PHB. How can I assist you today?')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(messages)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is PHB. How can I assist you today?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(llm.invoke(messages).content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output Parsers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,7 +274,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
