--- a/RAG/Langchain/prompt _&_parser.ipynb
+++ b/RAG/Langchain/prompt _&_parser.ipynb
@@ -246,13 +246,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Few-shot prompt templates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate,FewShotPromptTemplate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = [\n",
+    "    {\n",
+    "        \"question\": \"Who lived longer, Muhammad Ali or Alan Turing?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "Are follow up questions needed here: Yes.\n",
+    "Follow up: How old was Muhammad Ali when he died?\n",
+    "Intermediate answer: Muhammad Ali was 74 years old when he died.\n",
+    "Follow up: How old was Alan Turing when he died?\n",
+    "Intermediate answer: Alan Turing was 41 years old when he died.\n",
+    "So the final answer is: Muhammad Ali\n",
+    "\"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"When was the founder of craigslist born?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "Are follow up questions needed here: Yes.\n",
+    "Follow up: Who was the founder of craigslist?\n",
+    "Intermediate answer: Craigslist was founded by Craig Newmark.\n",
+    "Follow up: When was Craig Newmark born?\n",
+    "Intermediate answer: Craig Newmark was born on December 6, 1952.\n",
+    "So the final answer is: December 6, 1952\n",
+    "\"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Who was the maternal grandfather of George Washington?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "Are follow up questions needed here: Yes.\n",
+    "Follow up: Who was the mother of George Washington?\n",
+    "Intermediate answer: The mother of George Washington was Mary Ball Washington.\n",
+    "Follow up: Who was the father of Mary Ball Washington?\n",
+    "Intermediate answer: The father of Mary Ball Washington was Joseph Ball.\n",
+    "So the final answer is: Joseph Ball\n",
+    "\"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Are both the directors of Jaws and Casino Royale from the same country?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "Are follow up questions needed here: Yes.\n",
+    "Follow up: Who is the director of Jaws?\n",
+    "Intermediate Answer: The director of Jaws is Steven Spielberg.\n",
+    "Follow up: Where is Steven Spielberg from?\n",
+    "Intermediate Answer: The United States.\n",
+    "Follow up: Who is the director of Casino Royale?\n",
+    "Intermediate Answer: The director of Casino Royale is Martin Campbell.\n",
+    "Follow up: Where is Martin Campbell from?\n",
+    "Intermediate Answer: New Zealand.\n",
+    "So the final answer is: No\n",
+    "\"\"\",\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "question: Who lived longer, Muhammad Ali or Alan Turing?\n",
+      "answer: \n",
+      "Are follow up questions needed here: Yes.\n",
+      "Follow up: How old was Muhammad Ali when he died?\n",
+      "Intermediate answer: Muhammad Ali was 74 years old when he died.\n",
+      "Follow up: How old was Alan Turing when he died?\n",
+      "Intermediate answer: Alan Turing was 41 years old when he died.\n",
+      "So the final answer is: Muhammad Ali\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_template =PromptTemplate(template=\"question: {question}\\nanswer: {answer}\",\n",
+    "                                 input_variables=[\"question\",\"answer\"])\n",
+    "print(example_template.format(**examples[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = FewShotPromptTemplate(\n",
+    "    examples=examples,\n",
+    "    example_prompt=example_template,\n",
+    "    suffix=\"Question: {input}\",\n",
+    "    input_variables=[\"input\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt=prompt_template.format(input=\"Who was the maternal grandfather of George Washington?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'question: Who lived longer, Muhammad Ali or Alan Turing?\\nanswer: \\nAre follow up questions needed here: Yes.\\nFollow up: How old was Muhammad Ali when he died?\\nIntermediate answer: Muhammad Ali was 74 years old when he died.\\nFollow up: How old was Alan Turing when he died?\\nIntermediate answer: Alan Turing was 41 years old when he died.\\nSo the final answer is: Muhammad Ali\\n\\n\\nquestion: When was the founder of craigslist born?\\nanswer: \\nAre follow up questions needed here: Yes.\\nFollow up: Who was the founder of craigslist?\\nIntermediate answer: Craigslist was founded by Craig Newmark.\\nFollow up: When was Craig Newmark born?\\nIntermediate answer: Craig Newmark was born on December 6, 1952.\\nSo the final answer is: December 6, 1952\\n\\n\\nquestion: Who was the maternal grandfather of George Washington?\\nanswer: \\nAre follow up questions needed here: Yes.\\nFollow up: Who was the mother of George Washington?\\nIntermediate answer: The mother of George Washington was Mary Ball Washington.\\nFollow up: Who was the father of Mary Ball Washington?\\nIntermediate answer: The father of Mary Ball Washington was Joseph Ball.\\nSo the final answer is: Joseph Ball\\n\\n\\nquestion: Are both the directors of Jaws and Casino Royale from the same country?\\nanswer: \\nAre follow up questions needed here: Yes.\\nFollow up: Who is the director of Jaws?\\nIntermediate Answer: The director of Jaws is Steven Spielberg.\\nFollow up: Where is Steven Spielberg from?\\nIntermediate Answer: The United States.\\nFollow up: Who is the director of Casino Royale?\\nIntermediate Answer: The director of Casino Royale is Martin Campbell.\\nFollow up: Where is Martin Campbell from?\\nIntermediate Answer: New Zealand.\\nSo the final answer is: No\\n\\n\\nQuestion: Who was the maternal grandfather of George Washington?'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nAre follow up questions needed here: Yes.\\nFollow up: Who was the mother of George Washington?\\nIntermediate answer: The mother of George Washington was Mary Ball Washington.\\nFollow up: Who was the father of Mary Ball Washington?\\nIntermediate answer: The father of Mary Ball Washington was Joseph Ball.\\nFollow up: Who was the father of Joseph Ball?\\nIntermediate answer: The father of Joseph Ball was William Ball.\\nSo the final answer is: William Ball'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(prompt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -262,8 +431,119 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import PydanticOutputParser,CommaSeparatedListOutputParser\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_openai import OpenAI\n",
+    "\n",
+    "llm=OpenAI(model=\"gpt-3.5-turbo-instruct\",temperature=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_parser=CommaSeparatedListOutputParser()\n",
+    "format_instructions=output_parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your response should be a list of comma separated values, eg: `foo, bar, baz`'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "format_instructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template=PromptTemplate(template=\"you are a chat bot,was named phb, answer my questions :{question}/n{format_instructions}\",\n",
+    "                        input_variables=[\"question\"],\n",
+    "                        partial_variables={\"format_instructions\":format_instructions})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are a chat bot,was named phb, answer my questions :为我的花店取十个中文名字/nYour response should be a list of comma separated values, eg: `foo, bar, baz`\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#为什么会报错\n",
+    "prompt=template.format(question=\"为我的花店取十个中文名字\")\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n1. 花语堂, 2. 心意花舍, 3. 雅致花香, 4. 华生花店, 5. 醉花轩, 6. 花溪居, 7. 梦幻花园, 8. 梦之花间, 9. 花语驿站, 10. 花语餐厅'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
