--- a/RAG/Langchain/prompt _&_parser.ipynb
+++ b/RAG/Langchain/prompt _&_parser.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "'Your response should be a list of comma separated values, eg: `foo, bar, baz`'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -507,30 +507,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. 花语缤纷 \n",
+      "2. 花繁落尽 \n",
+      "3. 花好月圆 \n",
+      "4. 花影流香 \n",
+      "5. 花香四溢 \n",
+      "6. 花开花落 \n",
+      "7. 花间一梦 \n",
+      "8. 花海如画 \n",
+      "9. 花前月下 \n",
+      "10. 花开富贵\n"
+     ]
+    }
+   ],
+   "source": [
+    "result=llm.invoke(prompt)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\n1. 花语堂, 2. 心意花舍, 3. 雅致花香, 4. 华生花店, 5. 醉花轩, 6. 花溪居, 7. 梦幻花园, 8. 梦之花间, 9. 花语驿站, 10. 花语餐厅'"
+       "['1. 花语缤纷 \\n2. 花繁落尽 \\n3. 花好月圆 \\n4. 花影流香 \\n5. 花香四溢 \\n6. 花开花落 \\n7. 花间一梦 \\n8. 花海如画 \\n9. 花前月下 \\n10. 花开富贵']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm.invoke(prompt)"
+    "output_parser.parse(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
